--- a/src/app.scss
+++ b/src/app.scss
@@ -1,5 +1,3 @@
 @import 'partials/_variables.scss';
-
-body{
-  color: $maincolor;
-}
+@import 'partials/_common.scss';
+@import url('https://fonts.googleapis.com/css?family=Poppins&display=swap');
