--- a/src/app.scss
+++ b/src/app.scss
@@ -1,4 +1,5 @@
 @import 'partials/_variables.scss';
 @import 'partials/_common.scss';
 @import 'partials/_header.scss';
+@import 'partials/_mixin.scss';
 @import url('https://fonts.googleapis.com/css?family=Poppins&display=swap');
