--- a/src/partials/_header.scss
+++ b/src/partials/_header.scss
@@ -1,12 +1,30 @@
 .navbar{
   width: 100%;
   height: 80px;
-  border-bottom: 1px solid, black;
-  background-color: blue;
+  padding: 25px 0;
+  border-bottom: 1px solid black;
+  font-size: $fontSize/1.5;
   &:after{
     content: "";
     clear: both;
     display: table;
   };
-
+  .logo{
+    float: left;
+  };
+  .menu{
+    float: right;
+    .navbar_top{
+      list-style: none;
+      li{
+        display: inline-block;
+        margin: 0 20px;
+        a{
+          text-decoration: none;
+          font-weight: bold;
+          color: #58402C;
+        }
+      }
+    }
+  }
 }
