--- a/src/partials/_header.scss
+++ b/src/partials/_header.scss
@@ -10,10 +10,10 @@
     display: table;
   };
   .logo{
-    float: left;
+    @include floatLeftElement;
   };
   .menu{
-    float: right;
+    @include floatRightElement;
     .navbar_top{
       list-style: none;
       li{
@@ -23,8 +23,8 @@
           text-decoration: none;
           font-weight: bold;
           color: #58402C;
-        }
-      }
-    }
-  }
-}
+        };
+      };
+    };
+  };
+};
