--- a/src/partials/_mixin.scss
+++ b/src/partials/_mixin.scss
@@ -1,9 +1,9 @@
 @mixin floatLeftElement {
   float: left;
-};
+}
 @mixin floatRightElement{
   float: right;
-};
+}
 @mixin button{
   width: 70px;
   padding: 10px;
