--- a/src/partials/_mixin.scss
+++ b/src/partials/_mixin.scss
@@ -8,7 +8,7 @@
   width: 70px;
   padding: 10px;
   color: #30488F;
-  border-radius: 10px;;
+  border-radius: 10px;
   border: 1px solid #58402C;
 }
 @mixin clearfix{
