--- a/src/partials/_common.scss
+++ b/src/partials/_common.scss
@@ -8,6 +8,11 @@ body{
   color: $maincolor;
   font-size: $fontSize;
 }
+.flex{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 .container{
   margin: 0 30px;
 };
