--- a/src/app.scss
+++ b/src/app.scss
@@ -2,4 +2,4 @@
 @import 'partials/_common.scss';
 @import 'partials/_header.scss';
 @import 'partials/_mixin.scss';
-@import url('https://fonts.googleapis.com/css?family=Poppins&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Poppins:400,700&display=swap');
