cerco di cambiare colore al signup

--- a/src/partials/_common.scss
+++ b/src/partials/_common.scss
@@ -8,11 +8,12 @@ body{
   color: $maincolor;
   font-size: $fontSize;
 }
+.wrapper{
+  width: 90%;
+  margin: auto;
+}
 .flex{
   display: flex;
   justify-content: center;
   align-items: center;
 }
-.container{
-  margin: 0 30px;
-};
