--- a/src/partials/_header.scss
+++ b/src/partials/_header.scss
@@ -23,9 +23,12 @@
           font-weight: bold;
           color: #58402C;
         }
-        .btn{
-          @include btn;
-        }
+      }
+    }
+    .btn{
+      @include buttonElement;
+      a{
+        color: #233569;
       }
     }
   }
