--- a/src/partials/_common.scss
+++ b/src/partials/_common.scss
@@ -23,6 +23,7 @@ body{
 }
 .google{
   margin-right: 5px;
+  padding-top: 5px;
 }
 
 .solutions{
@@ -38,4 +39,5 @@ body{
 .slack{
   width: 18px;
   height: 18px;
+  margin-right: 5px;
 }
