--- a/src/partials/_common.scss
+++ b/src/partials/_common.scss
@@ -37,7 +37,7 @@ body{
 
 // jumbotron
 .wrapper_jumbotron{
-  justify-content: space-between;
+  // justify-content: space-between;
 }
 .slack{
   width: 18px;
